# quick-sort

./: CMakeLists.txt  ggt.c  quicksort.c  quicksort_multithreaded.c  quicksort_multithreaded_multirun.c
